--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
+    <header class="header header--is-hidden">
+        <div class="header__container">
+            <h1>
+                <img src="./dist/images/disneyplus.svg" alt="Disney+" class="header__logo">
+            </h1>
+            <ul class="header__links">
+                <li class="header__links__item">
+                    <a href="#" class="button-header button-header--secondary hidden">Assine Agora</a>
+                </li>
+                <li class="header__links__item">
+                    <a href="#" class="button-header button-header--dark">Entrar</a>
+                </li>
+            </ul>
+        </div>
+    </header>
     <section class="hero">
         <div class="hero__content">
-            <h1 class="hero__content__branding">
+            <div class="hero__content__branding">
                 <img src="./dist/images/disneyplus.svg" alt="Disney+">
-            </h1>
+            </div>
             <h3 class="title--small">
                 As melhores histórias em um só lugar.
             </h3>
@@ -156,7 +171,10 @@
         </div>
     </section>
     <section class="image-text-section image-text-section--image-full-width">
-        <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        <picture>
+            <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png"/>
+            <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        </picture>
         <div class="image-text-section--image-full-width__text_container image-text-section__text_container">
             <h2 class="title">Baixe filmes e séries</h2>
             <p class="text--big">
@@ -276,6 +294,52 @@
             </li>
         </ul>
     </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <img src="./dist/images/disneyplus.svg" alt="Disney+" class="footer__logo">
+            <ul class="footer__links">
+                <li class="footer__links__item">
+                    <div class="language-selector">
+                        <img src="./dist/images/icones/globe.svg" alt="Globo do mundo">
+                        <select>
+                            <option>English</option>
+                            <option selected>Português</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://disneytermsofuse.com/brazilian-portuguese/" target="_blank">Termos e Condições de Uso</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://www.disneyplus.com/pt-br/legal/pol%C3%ADtica-de-privacidade" target="_blank">Política de privacidade</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://www.disneyplus.com/pt-br/legal/prote%C3%A7%C3%A3o-de-dados-no-brasil" target="_blank">Proteção de Dados no Brasil</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://www.disneyplus.com/pt-br/legal/contrato-de-assinatura" target="_blank">Contrato de Assinatura</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://help.disneyplus.com/pt-BR/" target="_blank">Ajuda</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://help.disneyplus.com/pt-BR/article/disneyplus-devices-supported" target="_blank">Dispositivos compatíveis</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://help.disneyplus.com/pt-BR/" target="_blank">Sobre o Disney+</a>
+                </li>
+                <li class="footer__links__item">
+                    <a class="text--small" href="https://preferences-mgr.trustarc.com/?pid=disney01&aid=disneyplus01&type=disneyplus" target="_blank">Anúncios personalizados</a>
+                </li>
+            </ul>
+            <p class="text--small">
+                ® 2024 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+            </p>
+            <p class="text--small">
+                Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+            </p>
+        </div>
+    </footer>
     <script src="./src/main.js"></script>
 </body>
 </html>
