--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
                 <img src="./dist/images/mais_populares/obi_wan.jpg" alt="Obi Wan">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/desencantada.jpg" alt="Desencantada">
+                <img src="./dist/images/mais_populares/bluey.jpg" alt="Bluey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/lobisomem.jpg" alt="Lobisomem">
+                <img src="./dist/images/mais_populares/cavaleira_da_lua.jpg" alt="Cavaleiro da Lua">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/sem_limites.jpg" alt="Sem Limites">
+                <img src="./dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="O incrível Dr. Pol">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="Santa Clauses">
+                <img src="./dist/images/mais_populares/red.jpg" alt="Red">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/willow.jpg" alt="Willow">
+                <img src="./dist/images/mais_populares/tudo_igual_sqn.jpg" alt="Tudo igual... SQN">
             </li>
         </ul>
         <ul data-tab-id="star_plus" class="shows__list">
@@ -111,19 +111,19 @@
                 <img src="./dist/images/mais_no_star_plus/libertadores.jpg" alt="Libertadores">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/desencantada.jpg" alt="Desencantada">
+                <img src="./dist/images/mais_no_star_plus/belair.jpg" alt="Bel Air">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/lobisomem.jpg" alt="Lobisomem">
+                <img src="./dist/images/mais_no_star_plus/nba.jpg" alt="NBA">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/sem_limites.jpg" alt="Sem Limites">
+                <img src="./dist/images/mais_no_star_plus/os_simpson.jpg" alt="Os Simpsons">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="Santa Clauses">
+                <img src="./dist/images/mais_no_star_plus/premier_league.jpg" alt="Premier League">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/willow.jpg" alt="Willow">
+                <img src="./dist/images/mais_no_star_plus/the_kardashians.jpg" alt="The Kardashians">
             </li>
         </ul>
     </section>
